--- a/style.css
+++ b/style.css
@@ -131,5 +131,7 @@ body {
 }
 
 .chat-form button:hover {
-	background: #13c8d9;
-}
+      background-color:blue;
+      border-color:red;
+      color:white;
+ }
