--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-	background: #1ddced;
+	background: #fff;
 
 }
 
@@ -15,7 +15,7 @@ body {
 	width: 550px;
 	min-width: 400px;
 	height: 650px;
-	background: #fff;
+	background: #1d8fed;
 	padding: 25px;
 	margin: 20px auto;
 	box-shadow: 0 3px #ccc;
