--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 	width: 550px;
 	min-width: 400px;
 	height: 650px;
-	background: #1d8fed;
+	background-color: black;
 	padding: 25px;
 	margin: 20px auto;
 	box-shadow: 0 3px #ccc;
