--- a/style.css
+++ b/style.css
@@ -22,17 +22,13 @@ body {
 
 .chatbox
 {
-	width: 550px;
-	min-width: 400px;
-	height: 650px;
-	box-sizing:border-box;
-	border:none;
-	background-color: white;
+	width: 500px;
+	min-width: 390px;
+	height: 600px;
+	background: #fff;
 	padding: 25px;
 	margin: 20px auto;
 	box-shadow: 0 3px #ccc;
-	font-size: 18px;
-	border-radius: 5px;
 }
 .chat_box::placeholder
 {
