--- a/style.css
+++ b/style.css
@@ -6,22 +6,13 @@
 }
 
 body {
-	background-color: rgb(9,9,90);
-	justify-content: center;
-	align-items: center;
-}
-.top
-{
-	max-width:95%;
-	padding: 7px;
-	background-color: rgb(255, 255, 255);
-	border-radius: 7px;
-	box-shadow: 0px 0px 10px rgba(216,207,307,0.1);
-	text-align: center;
+	body {
+	background: #1ddced;
+
 }
 
-.chatbox
-{
+.chatbox{
+
 	width: 500px;
 	min-width: 390px;
 	height: 600px;
@@ -29,6 +20,7 @@ body {
 	padding: 25px;
 	margin: 20px auto;
 	box-shadow: 0 3px #ccc;
+
 }
 .chat_log
 {
