--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 *{
-	margin: 3;
-	padding: 2;
-	font-family: Arial, sans-serif;
+	margin: 0;
+	padding: 0;
+	font-family: tahoma, sans-serif;
 	box-sizing: border-box;
 }
 
 body {
-	body {
 	background: #1ddced;
 
 }
@@ -22,19 +21,18 @@ body {
 	box-shadow: 0 3px #ccc;
 
 }
-.chat_log
-{
 
+.chatlogs {
 	padding: 10px;
 	width: 100%;
-	height: 500px;
+	height: 450px;
 	overflow-x: hidden;
 	overflow-y: scroll;
 }
 
 .chatlogs::-webkit-scrollbar{
 
-	width: 11px;
+	width: 10px;
 
 }
 .chatlogs::-webkit-scrollbar-thumb {
@@ -47,7 +45,7 @@ body {
 	display: flex;
 	flex-flow: : row wrap;
 	align-items: flex-start;
-	margin-bottom: 9px;
+	margin-bottom: 10px;
 
 
 }
@@ -65,7 +63,7 @@ body {
 		width: 100%;
 }
 .chat .chat-message {
-	width: 75%;
+	width: 70%;
 	padding: 15px;
 	margin: 5px 10px 0;
 	border-radius: 10px;
@@ -133,7 +131,5 @@ body {
 }
 
 .chat-form button:hover {
-      background-color:blue;
-      border-color:red;
-      color:white;
- }
+	background: #13c8d9;
+}
