--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 	width: 500px;
 	min-width: 390px;
 	height: 550px;
-	background: #fff;
+	background-color: black;
 	padding: 25px;
 	margin: 20px auto;
 	box-shadow: 0 3px #ccc;
